// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Test Suite > Command: <check> > should match snapshot 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔦 Checking upgrade with id: 1709067445-protodanksharding
[90m┌───────────────────[39m[90m┬───────────────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Directory         [39m[90m│[39m[31m File Name         [39m[90m│[39m[31m Readable? [39m[90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m ./                [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m common.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m era-stage-proofs/ [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m mainnet2/         [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m stage2/           [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m testnet-sepolia/  [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m testnet2/         [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m└───────────────────[39m[90m┴───────────────────[39m[90m┴───────────┘[39m
"
`;

exports[`CLI Output Test Suite > Command: <check> > should support absolute paths 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔦 Checking upgrade with id: test-upgrade-mini
[90m┌───────────[39m[90m┬───────────────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Directory [39m[90m│[39m[31m File Name         [39m[90m│[39m[31m Readable? [39m[90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m ./        [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m common.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m mainnet2/ [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m└───────────[39m[90m┴───────────────────[39m[90m┴───────────┘[39m
"
`;

exports[`CLI Output Test Suite > Command: <list> > should match snapshot 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in reference for upgrades...
[90m┌─────────────────────[39m[90m┬─────────────[39m[90m┬──────────────────[39m[90m┬────────────[39m[90m┬────────────────────────────────┐[39m
[90m│[39m[31m Name                [39m[90m│[39m[31m Is Upgrade? [39m[90m│[39m[31m Protocol Version [39m[90m│[39m[31m Created at [39m[90m│[39m[31m Directory                      [39m[90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m protodanksharding   [90m│[39m Yes         [90m│[39m 21               [90m│[39m 2024-02-27 [90m│[39m 1709067445-protodanksharding   [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m v1.4.2-enchancement [90m│[39m Yes         [90m│[39m 22               [90m│[39m 2024-03-12 [90m│[39m 1710255954-v1.4.2-enchancement [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m mini-test           [90m│[39m Yes         [90m│[39m 1337             [90m│[39m 2024-04-10 [90m│[39m test-upgrade-mini              [90m│[39m
[90m└─────────────────────[39m[90m┴─────────────[39m[90m┴──────────────────[39m[90m┴────────────[39m[90m┴────────────────────────────────┘[39m
"
`;

exports[`CLI Output Test Suite > Command: <list> > should not display table when no upgrades found 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in ./ for upgrades...
ℹ️  No upgrades found in current directory.
"
`;

exports[`CLI Output Test Suite > Command: <list> > should support absolute paths 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in reference for upgrades...
[90m┌─────────────────────[39m[90m┬─────────────[39m[90m┬──────────────────[39m[90m┬────────────[39m[90m┬────────────────────────────────┐[39m
[90m│[39m[31m Name                [39m[90m│[39m[31m Is Upgrade? [39m[90m│[39m[31m Protocol Version [39m[90m│[39m[31m Created at [39m[90m│[39m[31m Directory                      [39m[90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m protodanksharding   [90m│[39m Yes         [90m│[39m 21               [90m│[39m 2024-02-27 [90m│[39m 1709067445-protodanksharding   [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m v1.4.2-enchancement [90m│[39m Yes         [90m│[39m 22               [90m│[39m 2024-03-12 [90m│[39m 1710255954-v1.4.2-enchancement [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m mini-test           [90m│[39m Yes         [90m│[39m 1337             [90m│[39m 2024-04-10 [90m│[39m test-upgrade-mini              [90m│[39m
[90m└─────────────────────[39m[90m┴─────────────[39m[90m┴──────────────────[39m[90m┴────────────[39m[90m┴────────────────────────────────┘[39m
"
`;
